Audit http headers